--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.jakewharton:butterknife:7.0.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
     compile files('libs/volley.jar')
 }
